# civil

./: .gitignore  .project  .travis.yml  Cargo.toml  LICENSE.md  README.md  lints.txt
scripts/: GLweights.rs  README.md  clean_conversion_table.csv  conversion_table.csv  formatted_conversions.txt  gen_abscissa.py  gen_conversions.py  units-of-measure_csv.csv
scripts/gen_abscissa/: main.go  tanhsinh_consts.rs
src/: lib.rs
src/bridge/: TODO.md  mod.rs
src/calc/: TODO.md  calculus.rs  gaussjordan.rs  linalg.rs  mod.rs
src/economics/: TODO.md  mod.rs
src/geotech/: TODO.md  mod.rs
src/materials/: TODO.md  mod.rs
src/sanitation/: TODO.md  mod.rs
src/structural/: TODO.md  mod.rs
src/structural/beams/: mod.rs
src/transportation/: TODO.md  mod.rs
src/units/: TODO.md  calculus.rs  conversions.rs  gaussjordan.rs  mod.rs
src/water/: TODO.md  mod.rs
tests/: all.rs  calc.rs  structural.rs  units.rs
