[package]
name = "civil"
description="a library to support civil engineering applications (WIP)"
keywords=["civil-engineering", "engineering-library", "civil"]
categories=["science"]
version = "0.1.0"
authors = ["Sam Kreimeyer"]
edition = "2018"
license = "MIT"

[badges]
travis-ci = { repository = "https://travis-ci.org/skreimeyer/civil", branch = "master" }
codecov = { repository = "https://codecov.io/gh/skreimeyer/civil", branch = "master" }
[dependencies]
