[package]
name = "civil"
description="a library to support civil engineering applications (WIP)"
keywords=["civil-engineering", "engineering-library", "civil"]
categories=["science"]
version = "0.2.0"
authors = ["Samuel Kreimeyer"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/skreimeyer/civil"
repository = "https://github.com/skreimeyer/civil"
readme = "README.md"

[badges]
travis-ci = { repository = "https://travis-ci.org/skreimeyer/civil", branch = "master" }

[dependencies]

[lib]
name = "civil"
path = "src/lib.rs"
test = true
edition = '2018'
crate-type = ["lib"]
